--- a/Index.html
+++ b/Index.html
@@ -97,6 +97,8 @@
             animation: fadeIn 2s ease-in-out;
         }
     </style>
+    <!-- Incluir JSZip -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 </head>
 <body>
     <header>
@@ -119,7 +121,7 @@
                 <li>Sube la constancia de CUIL utilizando el botón "Subir Constancia de CUIL".</li>
                 <li>Haz clic en el botón "Tomar Foto" para capturar una imagen.</li>
                 <li>Revisa la imagen en la vista previa para asegurarte de que sea adecuada.</li>
-                <li>Haz clic en el botón "Subir a BIOMETRICS" para subir la imagen.</li>
+                <li>Haz clic en el botón "Descargar Resultado" para descargar los archivos.</li>
             </ol>
             <p>Para que la foto sea útil para el reconocimiento, asegúrate de:</p>
             <ul>
@@ -145,7 +147,7 @@
 
             <br>
             <button id="captureBtn" disabled>📸 Tomar Foto</button>
-            <button id="uploadBtn" disabled>⬆ Subir a BIOMETRICS</button>
+            <button id="downloadBtn" disabled>⬇ Descargar Resultado</button>
             <button id="switchCameraBtn">🔄 Cambiar Cámara</button>
         </div>
 
@@ -161,7 +163,7 @@
         const canvas = document.getElementById("canvas");
         const preview = document.getElementById("preview");
         const captureBtn = document.getElementById("captureBtn");
-        const uploadBtn = document.getElementById("uploadBtn");
+        const downloadBtn = document.getElementById("downloadBtn");
         const switchCameraBtn = document.getElementById("switchCameraBtn");
         const statusMsg = document.getElementById("status");
         const cuilFileInput = document.getElementById("cuilFile");
@@ -170,11 +172,8 @@
         const content = document.getElementById("content");
         const gracias = document.getElementById("gracias");
 
-        const repoOwner = "SPARKGY";  // 🔴 Reemplázalo con tu usuario de GitHub
-        const repoName = "subir-foto";  // 🔴 Reemplázalo con tu repositorio
-        const githubToken = "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";  // ⚠ 🔴 NO LO USES EN PRODUCCIÓN
-
         let cuilFileName = "";
+        let cuilFileContent = "";
         let currentStream = null;
         let useFrontCamera = true;
 
@@ -219,7 +218,7 @@
         });
 
         // Subir constancia de CUIL
-        uploadCuilBtn.addEventListener("click", async () => {
+        uploadCuilBtn.addEventListener("click", () => {
             const file = cuilFileInput.files[0];
             if (!file) {
                 statusMsg.innerText = "❌ Por favor, selecciona un archivo PDF.";
@@ -229,64 +228,12 @@
             cuilFileName = file.name;
 
             const reader = new FileReader();
-            reader.onload = async (e) => {
-                const fileContent = e.target.result.split(",")[1];  // Convertir a Base64
+            reader.onload = (e) => {
+                cuilFileContent = e.target.result.split(",")[1];  // Convertir a Base64
 
-                const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contents/constancias/${cuilFileName}`;
-
-                // Verificar si el archivo ya existe para obtener su sha
-                let sha = null;
-                try {
-                    const checkResponse = await fetch(apiUrl, {
-                        method: "GET",
-                        headers: {
-                            "Authorization": `Bearer ${githubToken}`,
-                            "Accept": "application/vnd.github.v3+json"
-                        }
-                    });
-                    if (checkResponse.ok) {
-                        const checkData = await checkResponse.json();
-                        sha = checkData.sha;
-                        const confirmOverwrite = confirm("El archivo ya existe. ¿Deseas sobrescribirlo?");
-                        if (!confirmOverwrite) {
-                            statusMsg.innerText = "❌ Subida cancelada por el usuario.";
-                            return;
-                        }
-                    }
-                } catch (error) {
-                    console.error("❌ Error al verificar el archivo existente:", error);
-                }
-
-                const data = {
-                    message: "Subiendo constancia de CUIL",
-                    content: fileContent,
-                    sha: sha
-                };
-
-                try {
-                    const response = await fetch(apiUrl, {
-                        method: "PUT",
-                        headers: {
-                            "Authorization": `Bearer ${githubToken}`,
-                            "Accept": "application/vnd.github.v3+json",
-                            "Content-Type": "application/json"
-                        },
-                        body: JSON.stringify(data)
-                    });
-
-                    if (response.ok) {
-                        statusMsg.innerText = "✅ Constancia de CUIL subida con éxito.";
-                        captureBtn.disabled = false;
-                        cameraSection.classList.remove("hidden");
-                    } else {
-                        const errorData = await response.json();
-                        console.error("❌ Error en GitHub API:", errorData);
-                        statusMsg.innerText = `❌ Error al subir: ${errorData.message}`;
-                    }
-                } catch (error) {
-                    console.error("❌ Error general:", error);
-                    statusMsg.innerText = "❌ Hubo un problema al subir la constancia.";
-                }
+                statusMsg.innerText = "✅ Constancia de CUIL subida con éxito.";
+                captureBtn.disabled = false;
+                cameraSection.classList.remove("hidden");
             };
             reader.readAsDataURL(file);
         });
@@ -303,77 +250,29 @@
             preview.src = imageDataUrl;
             preview.style.display = "block";
             
-            // Habilitar el botón de subida
-            uploadBtn.disabled = false;
-            statusMsg.innerText = "📸 Foto tomada. Ahora puedes subirla.";
+            // Habilitar el botón de descarga
+            downloadBtn.disabled = false;
+            statusMsg.innerText = "📸 Foto tomada. Ahora puedes descargar el resultado.";
         });
 
-        // Subir la foto a BIOMETRICS
-        uploadBtn.addEventListener("click", async () => {
-            if (!cuilFileName) {
-                statusMsg.innerText = "❌ Primero sube la constancia de CUIL.";
-                return;
-            }
+        // Descargar los archivos como un ZIP
+        downloadBtn.addEventListener("click", () => {
+            const zip = new JSZip();
+            zip.file(cuilFileName, cuilFileContent, { base64: true });
+            zip.file("foto.jpg", canvas.toDataURL("image/jpeg").split(",")[1], { base64: true });
 
-            statusMsg.innerText = "⏳ Subiendo foto...";
-            const imageData = canvas.toDataURL("image/jpeg").split(",")[1];  // Convertir a Base64
-            const filePath = `fotos/${cuilFileName.replace(".pdf", ".jpg")}`;  // Usar el mismo nombre que la constancia
-
-            const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contents/${filePath}`;
-
-            // Verificar si el archivo ya existe para obtener su sha
-            let sha = null;
-            try {
-                const checkResponse = await fetch(apiUrl, {
-                    method: "GET",
-                    headers: {
-                        "Authorization": `Bearer ${githubToken}`,
-                        "Accept": "application/vnd.github.v3+json"
-                    }
+            zip.generateAsync({ type: "blob" })
+                .then((content) => {
+                    const link = document.createElement("a");
+                    link.href = URL.createObjectURL(content);
+                    link.download = "resultado.zip";
+                    link.click();
+                    statusMsg.innerText = "✅ Archivos descargados con éxito.";
+                })
+                .catch((error) => {
+                    console.error("❌ Error al generar el ZIP:", error);
+                    statusMsg.innerText = "❌ Hubo un problema al generar el archivo ZIP.";
                 });
-                if (checkResponse.ok) {
-                    const checkData = await checkResponse.json();
-                    sha = checkData.sha;
-                    const confirmOverwrite = confirm("El archivo ya existe. ¿Deseas sobrescribirlo?");
-                    if (!confirmOverwrite) {
-                        statusMsg.innerText = "❌ Subida cancelada por el usuario.";
-                        return;
-                    }
-                }
-            } catch (error) {
-                console.error("❌ Error al verificar el archivo existente:", error);
-            }
-
-            const data = {
-                message: "Subiendo foto desde la cámara",
-                content: imageData,
-                sha: sha
-            };
-
-            try {
-                const response = await fetch(apiUrl, {
-                    method: "PUT",
-                    headers: {
-                        "Authorization": `Bearer ${githubToken}`,
-                        "Accept": "application/vnd.github.v3+json",
-                        "Content-Type": "application/json"
-                    },
-                    body: JSON.stringify(data)
-                });
-
-                if (response.ok) {
-                    statusMsg.innerText = "✅ Foto subida con éxito a BIOMETRICS.";
-                    content.classList.add("hidden");
-                    gracias.classList.remove("hidden");
-                } else {
-                    const errorData = await response.json();
-                    console.error("❌ Error en GitHub API:", errorData);
-                    statusMsg.innerText = `❌ Error al subir: ${errorData.message}`;
-                }
-            } catch (error) {
-                console.error("❌ Error general:", error);
-                statusMsg.innerText = "❌ Hubo un problema al subir la imagen.";
-            }
         });
     </script>
 
