--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 <body>
     <header>
         <div style="display: flex; justify-content: center;">
-            <img src="logos/logo_cima.bmp" alt="Logo CIMA">
-            <img src="logos/logo_spark.bmp" alt="Logo SPARK">
+            <img src="logos/logo_cima.bmp" alt="Logo CIMA" onerror="this.onerror=null; this.src='logos/logo_cima.png';">
+            <img src="logos/logo_spark.bmp" alt="Logo SPARK" onerror="this.onerror=null; this.src='logos/logo_spark.png';">
         </div>
         <h2>P24101 Proyecto CENTRAL PROCESSING FACILITY – CPF2</h2>
     </header>
