--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             margin-bottom: 20px;
         }
         header img {
-            max-width: 100px;
+            height: 100px;
+            width: auto;
             margin: 10px;
         }
         h1 {
