--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
         .instructions {
             max-width: 400px;
-            text-align: left;
+            text-align: center;
             margin-top: 20px;
             background: #fff;
             padding: 20px;
