--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
             margin-top: 50px;
             animation: fadeIn 2s ease-in-out;
         }
+        #content {
+            max-width: 400px;
+            width: 100%;
+        }
     </style>
     <!-- Incluir JSZip -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
