--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             margin-bottom: 20px;
         }
         header img {
-            height: 150px;
+            height: auto;
             width: auto;
+            max-height: 150px;
             margin: 10px;
+            object-fit: contain;
         }
         h1 {
             color: rgb(0, 28, 50);
@@ -71,7 +73,7 @@
         }
         .instructions {
             max-width: 400px;
-            text-align: center;
+            text-align: left;
             margin-top: 20px;
             background: #fff;
             padding: 20px;
