--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             max-height: 150px;
             margin: 10px;
             object-fit: contain;
+            /* border: none; */
         }
         h1 {
             color: rgb(0, 28, 50);
@@ -102,6 +103,11 @@
         #content {
             max-width: 400px;
             width: 100%;
+        }
+        @media (max-width: 600px) {
+            header div {
+                flex-direction: column;
+            }
         }
     </style>
     <!-- Incluir JSZip -->
