--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             header div {
                 flex-direction: column;
             }
+            h2 {
+                text-align: center;
+                white-space: normal;
+            }
         }
     </style>
     <!-- Incluir JSZip -->
