--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             font-size: 2.5em;
             margin-bottom: 10px;
         }
+        h2 {
+            font-size: 1.2em; /* Shrink the text size */
+        }
         h3 {
             color: rgb(0, 28, 50);
             animation: fadeIn 2s ease-in-out;
