Remove border from image styling in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             max-height: 150px;
             margin: 10px;
             object-fit: contain;
-            /* border: none; */
+            border: none; /* Remove the border */
         }
         h1 {
             color: rgb(0, 28, 50);
