--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             margin: 10px;
             object-fit: contain;
             border: none; /* Remove the border */
+            max-width: 100%; /* Ensure logos shrink if the page narrows */
         }
         h1 {
             color: rgb(0, 28, 50);
