--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         header img {
             height: auto;
             width: auto;
-            max-height: 150px;
+            max-height: 127.5px; /* Decreased by 15% from 150px */
             margin: 10px;
             object-fit: contain;
             border: none; /* Remove the border */
-            max-width: 100%; /* Ensure logos shrink if the page narrows */
+            max-width: 85%; /* Decreased by 15% from 100% */
         }
         h1 {
             color: rgb(0, 28, 50);
