--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             margin-bottom: 10px;
         }
         h2 {
-            font-size: 1.2em; /* Shrink the text size */
+            color: rgb(0, 28, 50);
+            animation: fadeIn 2s ease-in-out;
+            font-size: 2em;
+            margin-bottom: 20px;
         }
         h3 {
             color: rgb(0, 28, 50);
