--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </script>
 
     <div class="footer">
-        <p>Al subir la foto, el usuario acepta el uso de sus datos para el reconocimiento facial. Estos datos solo serán utilizados para el acceso en las plataformas de la compañía mientras dure la tarea motivo de su necesidad o sean eliminados.</p>
+        <p>Al subir la foto, el usuario acepta el uso de sus datos para el reconocimiento facial en el punto de control de acceso del proyecto CPF2. Estos datos solo serán utilizados para este proposito de maners de agilizar el acceso a sitio. Los mismos seran eliminados al finalizar el proyecto.</p>
     </div>
 </body>
 </html>
