--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
     </script>
 
     <div class="footer">
-        <p>Al subir la foto, el usuario acepta el uso de sus datos para el reconocimiento facial en el punto de control de acceso del proyecto CPF2. Estos datos solo serán utilizados para este proposito de maners de agilizar el acceso a sitio. Los mismos seran eliminados al finalizar el proyecto.</p>
+        <p>Al compartir el zip obtenido, el usuario acepta que la informacion adjunta se utilice para el reconocimiento facial en el punto de control de acceso al proyecto CPF2. </p>
+        <p>Estos datos solo residiran en el puesto de control y no estaran replicados en otro lugar ni en ninguna base de datos en internet</p>
+        <p>Estos datos agilizaran el acceso a sitio y seran eliminados al finalizar el proyecto.</p>
     </div>
 </body>
 </html>
